--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -485,7 +485,7 @@ further research and development is needed.
 \subsection{Motivation and Overview}
 \label{motivation}
 
-Based on our work in the DCMI RDF Application Profiles Task Group and in cooperation with the W3C Data Shapes Working Group, 
+Based on our work in the \emph{DCMI RDF Application Profiles Task Group} and in cooperation with the \emph{W3C Data Shapes Working Group}, 
 we identified and published by today 81 requirements to formulate RDF constraints that are required by various stakeholders for data applications.
 Each of these requirements corresponds to a constraint type from which concrete constraints are instantiated to be checked against RDF data.
 Requirements/constraint types are uniquely identified by alphanumeric technical identifiers.
@@ -516,8 +516,8 @@ Reasoning is beneficial for \emph{RDF} validation as
 (1) it may resolve constraint violations, 
 (2) it may cause valuable violations, and 
 (3) it solves the \emph{redundancy} problem. 
-In this paper, we investigate the role that reasoning plays in practical data validation and 
-how to overcome the major shortcomings when validating RDF data by performing reasoning prior to validation.
+%In this paper, we investigate the role that reasoning plays in practical data validation and 
+%how to overcome the major shortcomings when validating RDF data by performing reasoning prior to validation.
 
 %Reasoning and validation are very closely related. 
 %It should be possible (1) to perform reasoning prior to validation or (2) to validate without reasoning.
