--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -666,8 +666,8 @@ Another important role may play \emph{OWL 2 DL} as 2/3 of all constraint types,
 nearly 1/2 of the $\overline{\mathcal{R}}$ constraint types, and
 almost all $\mathcal{R}$ constraint types
 are expressible by \emph{OWL 2 DL}.
-Even though, $\mathcal{R}$ constraint types corresponding to \emph{OWL 2 DL} axioms are fully implemented when they are used with reasoning,
-we cannot use them directly to validate RDF data since \emph{OWL 2} and RDF validation assume different semantics which leads to differences in results. 
+Even though, $\mathcal{R}$ constraint types corresponding to \emph{OWL 2 DL} axioms are fully implemented when using them with reasoning,
+we cannot apply them directly to validate RDF data since \emph{OWL 2} reasoning and RDF validation assume different semantics which leads to differences in results. 
 
 %-----
 %
@@ -1109,21 +1109,23 @@ we cannot use them directly to validate RDF data since \emph{OWL 2} and RDF vali
 %\subsection{The Role of Reasoning for RDF Validation}
 %\label{the-role-of-reasoning-for-rdf-validation}
  
-This paper aims to address two main audiences: 
-(1) data practitioners seeking for the role of reasoning for validation and
-(2) reasoning experts to raise the awareness for practical applications on validation.
+%This paper aims to address two main audiences: 
+%(1) data practitioners seeking for the role of reasoning for validation and
+%(2) reasoning experts to raise the awareness for practical applications on validation.
 The contributions of this paper are:
 %(1) We lay the ground for discussions on RDF validation.
 %(2) We work out the role that reasoning plays in practical data validation and why reasoning is important for validation.
-(1) We work out the role that reasoning plays in practical data validation and 
+(1) We work out the role that reasoning plays in practical data validation,
+why reasoning is beneficial for RDF validation, and 
 how to overcome the major shortcomings when validating RDF data by performing reasoning prior to validation. 
 (2) We identified and published by today 81 types of constraints that are required by various stakeholders for data applications. 
-(3) For each constraint type we examine
+(3) For each constraint type, we examine
     if reasoning may improve data quality, 
     how efficient in terms of runtime validation is performed with and without reasoning, and
 		if validation results depend on the \emph{CWA} and on the \emph{UNA}.
-(4) Using these findings, we determine for the most common constraint languages which constraint types they are able to express
+(4) We determine for the most common constraint languages which constraint types they are able to express
     and give directions for the further development of constraint languages.
+(5) We implemented the validation of constraint types expressible by common constraint languages and reasoning capabilities for all $\mathcal{R}$ constraint types.
 	
 %The prerequisite to use \emph{OWL 2} constructs in terms of constraint types, we adopt the same semantics for them (\emph{CWA} and \emph{UNA}) as for RDF validation in general.
 %Therefore, we described the intended behavior of each constraint type in terms of validation results depending on \emph{CWA} and \emph{UNA}.
