--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -668,7 +668,7 @@ almost all $\mathcal{R}$ constraint types
 are expressible by \emph{OWL 2 DL}.
 Even though, $\mathcal{R}$ constraint types corresponding to \emph{OWL 2 DL} axioms are fully implemented when using them with reasoning,
 we cannot apply them directly to validate RDF data since \emph{OWL 2} reasoning and RDF validation assume different semantics which leads to differences in results. 
-Therefore, we implemented the validation of all $\mathcal{R}$ constraint types expressible by \emph{OWL 2 DL} under the RDF validation assumptions \emph{CWA} and \emph{UNA}.
+%Therefore, we implemented the validation of all $\mathcal{R}$ constraint types expressible by \emph{OWL 2 DL} under the RDF validation assumptions \emph{CWA} and \emph{UNA}.
 
 %-----
 %
